[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-sentinel"
version = "0.1.0"
description = "Policy-gated 24x7 AI incident operations core"
requires-python = ">=3.10"

[project.scripts]
openclaw-sentinel = "openclaw_sentinel.cli:main"
openclaw-onboarding = "openclaw_sentinel.onboarding:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
